fixed errors from using NodeTemplateMap
